--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,13 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 35px 60px 10px 60px;
+  padding: 15px 60px 15px 60px;
   background-color: transparent;
-  z-index: 99; }
+  z-index: 99;
+  color: #888888; }
   header.a1xploretv-homepage, header.package-smarthome, header.header-position-relative {
     position: relative;
-    min-height: 60px;
-    background-color: #efefef;
-    padding-top: 0; }
+    background-color: #efefef; }
     header.a1xploretv-homepage .a1xploretv-date-time, header.package-smarthome .a1xploretv-date-time, header.header-position-relative .a1xploretv-date-time {
       color: #888888; }
   header.package-smarthome, header.header-position-relative {
@@ -39,7 +38,8 @@ body {
   padding: 0;
   position: relative;
   text-rendering: optimizeLegibility;
-  min-width: 1280px; }
+  min-width: 1280px;
+  overflow-x: hidden; }
   @media (min-width: 1920px) {
     body {
       font-size: 1.4rem; } }
@@ -188,6 +188,21 @@ section {
 
 .slick-slide:focus {
   outline: none; }
+
+.a1xploretv-video-frame {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+.a1xploretv-video-frame iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%; }
 
 @font-face {
   font-family: 'A1Serif';
@@ -364,8 +379,8 @@ section {
       -ms-flex-align: center;
           align-items: center;
   height: auto;
-  min-height: calc(100% - 90px);
-  padding-bottom: 30px; }
+  min-height: calc(100vh - 90px);
+  padding: 60px 0; }
   .a1xploretv-e-header {
     padding: 10px 60px; }
   .a1xploretv-e-nav {
@@ -439,6 +454,8 @@ section {
       top: 0;
       left: 0;
       opacity: 0; }
+      .a1xploretv-e-radio input:checked ~ .a1xploretv-e-radio-ui {
+        opacity: 1; }
       .a1xploretv-e-radio input:checked ~ .a1xploretv-e-radio-ui::before {
         width: 100%;
         height: 100%;
@@ -455,7 +472,8 @@ section {
       top: 2px;
       left: 0;
       padding: 3px;
-      display: block; }
+      display: block;
+      opacity: 0.3; }
       .a1xploretv-e-radio-ui.focusable:focus {
         background: transparent;
         border: 1px solid #da291c; }
@@ -503,7 +521,7 @@ section {
           top: -6px;
           left: 8px; }
       .a1xploretv-e-checkbox input:checked ~ .a1xploretv-e-checkbox-text {
-        color: #ffffff; }
+        }
     .a1xploretv-e-checkbox-ui-bg {
       width: 100%;
       height: 100%;
@@ -511,7 +529,6 @@ section {
       top: 0;
       left: 0;
       display: none;
-      background-color: #000000;
       z-index: 0; }
     .a1xploretv-e-checkbox-ui {
       width: 22px;
@@ -565,7 +582,7 @@ section {
 
 .a1xploretv-f {
   margin-top: 20px;
-  height: 75vh; }
+  height: 100vh; }
   @media (min-width: 1920px) {
     .a1xploretv-f {
       margin-top: 40px; } }
@@ -615,7 +632,7 @@ section {
 
 .a1xploretv-g {
   margin-top: 20px;
-  height: 75vh; }
+  height: 100vh; }
   @media (min-width: 1920px) {
     .a1xploretv-g {
       margin-top: 40px; } }
