--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -381,6 +381,8 @@ section {
   height: auto;
   min-height: calc(100vh - 90px);
   padding: 60px 0; }
+  .a1xploretv-e form {
+    width: 100%; }
   .a1xploretv-e-header {
     padding: 10px 60px; }
   .a1xploretv-e-nav {
@@ -520,8 +522,6 @@ section {
           position: absolute;
           top: -6px;
           left: 8px; }
-      .a1xploretv-e-checkbox input:checked ~ .a1xploretv-e-checkbox-text {
-        }
     .a1xploretv-e-checkbox-ui-bg {
       width: 100%;
       height: 100%;
