--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: A1 Xplore TV
-Text Domain: a1exploretv
+Theme Name: Xplore TV
+Text Domain: xploretv
 Version: 0.4.1
 Requires at least: 5.6
 Requires PHP: 7.2
 Description: This theme for Xplore TV is designed to take full advantage of the A1 set top box and the VEWD browser.
-Tags: A1, xplore-tv, VEWD
+Tags: xplore-tv, VEWD
 Author: seso media group gmbh
 Author URI: https://www.seso.at/
 License: GNU General Public License v2 or later
