Asset update for element styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -659,7 +659,7 @@ section {
     .a1xploretv-f-container.full-width {
       max-width: 100%; }
   .a1xploretv-f-box {
-    width: 340px;
+    width: 20%;
     padding: 30px 25px;
     -webkit-box-shadow: 0 0 20px 0px #d0d0d0;
             box-shadow: 0 0 20px 0px #d0d0d0;
