--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,15 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 15px 60px 15px 60px;
+  padding: 45px 60px 15px 60px;
   background-color: transparent;
   z-index: 99;
   color: #888888; }
+  header h1 {
+    font-family: A1Sans;
+    font-size: 1rem;
+    color: #888888;
+    margin: 0 !important; }
   header.a1xploretv-homepage, header.package-smarthome, header.header-position-relative {
     position: relative;
     background-color: #efefef; }
@@ -36,13 +41,14 @@ body {
   line-height: 1.5;
   margin: 0;
   padding: 0;
+  font-size: 18px;
   position: relative;
   text-rendering: optimizeLegibility;
   min-width: 1280px;
   overflow-x: hidden; }
   @media (min-width: 1920px) {
     body {
-      font-size: 1.4rem; } }
+      font-size: 24px; } }
 
 * {
   -webkit-font-smoothing: antialiased;
@@ -59,7 +65,7 @@ h6, .h6 {
   font-family: "A1Serif", Verdana, sans-serif;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.2;
+  line-height: 1.3;
   margin-bottom: 8px;
   margin-top: 3px;
   text-rendering: optimizeLegibility; }
@@ -94,17 +100,21 @@ h6, .h6 {
 
 p {
   font-family: inherit;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
   margin-bottom: 20px;
   text-rendering: optimizeLegibility; }
   @media (min-width: 1920px) {
     p {
-      font-size: 21px; } }
+      font-size: 24px; } }
 
 a {
-  color: #000000; }
+  color: #000000;
+  font-size: 18px; }
+  @media (min-width: 1920px) {
+    a {
+      font-size: 24px; } }
   a:hover, a:focus {
     color: #ffffff;
     text-decoration: none;
@@ -127,14 +137,18 @@ a.button, .button {
   text-decoration: none;
   display: inline-block;
   padding: 7px 14px 8px 14px;
-  font-size: 1.675rem;
+  font-size: 18px;
   background-color: #da291c;
   border-color: #da291c;
   color: #ffffff;
-  -webkit-transition: background-color .3s ease-out;
-  transition: background-color .3s ease-out; }
+  -webkit-transition: background-color .5s ease-out;
+  transition: background-color .5s ease-out; }
+  @media (min-width: 1920px) {
+    a.button, .button {
+      font-size: 24px; } }
   a.button:focus, a.button:hover, .button:focus, .button:hover {
-    background-color: #da291c;
+    background-color: #ae2116;
+    border-color: #ae2116;
     color: #ffffff; }
   a.button.arrowright, .button.arrowright {
     padding-left: 20px;
@@ -184,10 +198,14 @@ main {
 
 section {
   width: 100%;
-  padding: 10px 120px; }
+  padding: 40px 120px; }
   @media (min-width: 1920px) {
     section {
-      padding: 10px 190px; } }
+      padding: 60px 190px; } }
+
+.a1xploretv-main-wrapper-inner {
+  max-width: 1040px;
+  margin: 0 auto; }
 
 .slick-slide:focus {
   outline: none; }
@@ -288,6 +306,8 @@ section {
   height: 96vh;
   position: relative;
   overflow: hidden; }
+  .a1xploretv-d.you-vim-video {
+    height: auto; }
   .a1xploretv-d video {
     -o-object-fit: cover;
        object-fit: cover;
@@ -432,6 +452,9 @@ section {
   padding: 60px 0; }
   .a1xploretv-e form {
     width: 100%; }
+  .a1xploretv-e label {
+    margin-bottom: 6px;
+    font-size: 20px; }
   .a1xploretv-e-header {
     padding: 10px 60px; }
   .a1xploretv-e-nav {
@@ -442,6 +465,9 @@ section {
     max-width: 526px; }
   .a1xploretv-e-textblock {
     margin-bottom: 32px; }
+    .a1xploretv-e-textblock-checkicon img {
+      margin: 0 auto;
+      max-width: 100px; }
     .a1xploretv-e-textblock.mb-60px {
       margin-bottom: 60px; }
     .a1xploretv-e-textblock > :last-child {
@@ -484,8 +510,8 @@ section {
         border-right: 2px solid #efefef; }
   .a1xploretv-e-radio-label {
     font-size: 21px;
-    text-align: center;
-    margin: 0 0 22px 0; }
+    text-align: left;
+    margin: 0 0 6px 0; }
   .a1xploretv-e-radios {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -638,10 +664,14 @@ section {
 
 .a1xploretv-f {
   margin-top: 20px;
-  height: 100vh; }
+  min-height: 100vh;
+  padding-left: 0;
+  padding-right: 0; }
   @media (min-width: 1920px) {
     .a1xploretv-f {
       margin-top: 40px; } }
+  .a1xploretv-f .focusable:focus {
+    border: 0 !important; }
   .a1xploretv-f.h-auto {
     margin-bottom: 60px; }
     @media (min-width: 1920px) {
@@ -649,7 +679,6 @@ section {
         margin-bottom: 80px; } }
   .a1xploretv-f-container {
     width: 100%;
-    max-width: 70%;
     margin: 30px auto 0 auto; }
     .a1xploretv-f-container > div {
       display: table;
@@ -659,29 +688,37 @@ section {
     .a1xploretv-f-container.full-width {
       max-width: 100%; }
   .a1xploretv-f-box {
-    width: 20%;
+    width: 260px;
     padding: 30px 25px;
     -webkit-box-shadow: 0 0 20px 0px #d0d0d0;
             box-shadow: 0 0 20px 0px #d0d0d0;
     background-color: #ffffff;
     display: table-cell;
     vertical-align: middle; }
+    @media (min-width: 1920px) {
+      .a1xploretv-f-box {
+        width: 340px; } }
     .a1xploretv-f-box img {
-      margin-bottom: 40px;
       width: 100%;
-      max-width: 100%;
-      height: auto; }
+      max-width: 170px;
+      height: auto;
+      display: block;
+      margin: 0 auto 40px; }
     .a1xploretv-f-box a:focus {
       background-color: #da291c; }
   .a1xploretv-f-title {
     font-family: "A1Serif";
     font-weight: 500;
     margin-bottom: 20px;
-    word-break: break-word; }
+    word-break: break-word;
+    -webkit-hyphens: auto;
+        -ms-hyphens: auto;
+            hyphens: auto; }
 
 .a1xploretv-g {
   margin-top: 20px;
-  height: 100vh; }
+  padding-top: 60px;
+  padding-bottom: 60px; }
   @media (min-width: 1920px) {
     .a1xploretv-g {
       margin-top: 40px; } }
@@ -702,14 +739,19 @@ section {
   .a1xploretv-g-right {
     max-width: 25%;
     margin-left: 130px; }
+    .a1xploretv-g-right.order-1 {
+      margin-left: 0; }
   .a1xploretv-g a:hover, .a1xploretv-g a:focus {
     background-color: transparent !important;
     border: 0; }
   .a1xploretv-g .button {
-    font-size: 20px;
+    font-size: 18px;
     margin-top: 20px; }
+    @media (min-width: 1920px) {
+      .a1xploretv-g .button {
+        font-size: 24px; } }
     .a1xploretv-g .button:hover, .a1xploretv-g .button:focus {
-      background-color: #da291c !important; }
+      background-color: #ae2116 !important; }
 
 .a1xploretv-i {
   margin-top: 10px; }
@@ -834,7 +876,7 @@ section {
     @media (min-width: 1920px) {
       .a1xploretv-l-slider img {
         max-width: 300px; } }
-  .a1xploretv-l-slider .slick-center img {
+  .a1xploretv-l-slider .slick-current img {
     border: 2px solid red; }
   .a1xploretv-l #productInfo {
     max-width: 760px;
@@ -857,7 +899,8 @@ section {
       font-weight: 700;
       margin-bottom: 10px; }
     .a1xploretv-l #productInfo ul {
-      font-size: 21px; }
-      .a1xploretv-l #productInfo ul li {
-        line-height: 34px; }
+      font-size: 18px; }
+      @media (min-width: 1920px) {
+        .a1xploretv-l #productInfo ul {
+          font-size: 21px; } }
 /*# sourceMappingURL=style.css.map */
