--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -962,46 +962,5 @@ section {
     .a1xploretv-k-video-slider .a1xploretv-d-pause:focus, .a1xploretv-k-video-slider .a1xploretv-d-pause:hover {
       color: #ffffff !important; }
 
-.a1xploretv-l {
-  margin-top: 80px;
-  margin-bottom: 80px; }
-  .a1xploretv-l-slider .product {
-    text-align: center; }
-    .a1xploretv-l-slider .product:hover, .a1xploretv-l-slider .product:focus {
-      border: none; }
-  .a1xploretv-l-slider img {
-    max-width: 230px;
-    margin: 0 auto 30px auto;
-    -webkit-box-shadow: 0 0 20px 0px #d0d0d0;
-            box-shadow: 0 0 20px 0px #d0d0d0; }
-    @media (min-width: 1920px) {
-      .a1xploretv-l-slider img {
-        max-width: 300px; } }
-  .a1xploretv-l-slider .slick-current img {
-    border: 2px solid red; }
-  .a1xploretv-l #productInfo {
-    max-width: 760px;
-    margin: 0 auto; }
-    @media (min-width: 1920px) {
-      .a1xploretv-l #productInfo {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-        height: 80%; } }
-    .a1xploretv-l #productInfo .productInfo-title {
-      font-size: 28px;
-      font-family: "A1Sans";
-      font-weight: 700;
-      margin-bottom: 10px; }
-    .a1xploretv-l #productInfo ul {
-      font-size: 17px; }
-      @media (min-width: 1920px) {
-        .a1xploretv-l #productInfo ul {
-          font-size: 24px; } }
+/* This file intentionally left blank */
 /*# sourceMappingURL=style.css.map */
