--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
 Theme Name: Xplore TV
 Text Domain: xploretv
-Version: 0.4.1
+Version: 0.9.0
 Requires at least: 5.6
 Requires PHP: 7.2
 Description: This theme for Xplore TV is designed to take full advantage of the A1 set top box and the VEWD browser.
-Tags: xplore-tv, VEWD
+Tags: xploretv, smart home, VEWD
 Author: seso media group gmbh
 Author URI: https://www.seso.at/
 License: GNU General Public License v2 or later
