--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
   --a1-button-background-cool-blue-selected: rgba(98, 149, 172, 1);
   /* #6295ac */
   /* Indicator */
-  --a1-indicator: rgba(#666666, .36);
+  --a1-indicator: rgba(102, 102, 102, .36);
   /* Fill Colors */
   --a1-fill-grey-primary: rgba(112, 112, 112, .2);
   /* #707070 */
